@@ -1,3 +1,9 @@
+2006-07-11 Erik Hjortsberg  <erik@katastrof.nu>
+
+	* src/components/ogre/environment/Water.cpp: make the water plane a bit bigger
+	* src/components/ogre/EmberOgre.cpp: check that SDL really has been initialized
+	* src/components/ogre/input/Input.cpp: don't use NULL macros
+
 2006-07-10 Erik Hjortsberg  <erik@katastrof.nu>
 
 	* ember.in: updated media handling
